--- a/vue/login1.html
+++ b/vue/login1.html
@@ -13,9 +13,9 @@
     <div class="form_inscription">
     <form action="">
             <div class="contenuedesinput">
-                <h1 id="ena">ENA</h1>
+                <h1 id="ena">JOSNET</h1>
                 <h2>Creer un compte</h2>
-                <p>Inscrivez-vous pour acceder a MyENA</p>
+                <p>Inscrivez-vous pour acceder a JOSNET</p>
                 <div class="tytytyt">
                 <div class="input">
                     <div class="mt">
